automation/full_platform/k8s/model-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-api
  namespace: auto-mlops
spec:
  selector:
    app: model-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
