automation/full_platform/k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: auto-mlops
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
