automation/full_platform/k8s/web-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  namespace: auto-mlops
spec:
  selector:
    app: web-ui
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
